--- a/ArchLinux/.config/kitty/royal-dark.conf
+++ b/ArchLinux/.config/kitty/royal-dark.conf
@@ -11,7 +11,7 @@ background            #212128
 selection_foreground  #eeeef4
 selection_background  #404040
 
-url_color #8060for
+url_color #8060f2
 
 # black
 color0  #1a1a1e
