--- a/ArchLinux/.config/kitty/kitty.conf
+++ b/ArchLinux/.config/kitty/kitty.conf
@@ -13,26 +13,21 @@ include royal-dark.conf
 # vim:fileencoding=utf-8:ft=conf
 
 # Font family. You can also specify different fonts for the
-# bold/italic/bold-italic variants. By default they are derived automatically,
-# by the OSes font system. Setting them manually is useful for font families
-# that have many weight variants like Book, Medium, Thick, etc. For example:
-# font_family Operator Mono Book
-# bold_font Operator Mono Thick
-# bold_italic_font Operator Mono Medium
-# font_family      Input Mono
-font_family      DejaVu Sans Book
+# bold/italic/bold-italic variants. 
+font_family      Source Code Pro Medium 
 italic_font      auto
-bold_font        auto
-bold_italic_font auto
+bold_font        Source Code Pro Bold
+bold_italic_font auto 
 
 # Font size (in pts)
-font_size        11.0
+font_size        11.5
 
 #Background Opacity
-#background_opacity  0.9
+background_opacity  0.96
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     underline
-
+#Defines the thickness of the beam cursor (in pts)
+cursor_underline_thickness 1.25
 # The interval (in seconds) at which to blink the cursor. Set to zero to
 # disable blinking.
 cursor_blink_interval     0.5
